# accountancy-automation

./: .cruft.json  .flake8  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docker/ida-py/: Dockerfile  docker-entrypoint.sh
docker/nginx/: wait_for_certificates.sh
docker/nginx/templates/: nginx.conf.template
docs/contributing/: 1.-contributing-guide.md  2.-coding-standard.md  4.-acknowledgements.md
ida_py/: __init__.py  __main__.py  errors.py  main.py
ida_py/api/: __init__.py  config.py  main.py  utils.py
ida_py/bot/: __init__.py  config.py  errors.py  main.py  models.py
ida_py/server/: __init__.py  config.py  errors.py  main.py  models.py  utils.py
ida_py/transformer/: __init__.py  errors.py  main.py
ida_py/urlrequest/: __init__.py  errors.py  main.py  models.py
scripts/: clean.sh  lint.sh  test.sh
tests/: __init__.py  test_api.py  test_bot.py  test_main.py  test_server.py  test_transformer.py  test_urlrequest.py  test_version.py  utils.py
tests/data/api/get_bot_405/: request.txt  response.txt
tests/data/api/get_notfound_404/: request.txt  response.txt
tests/data/api/get_ping_200/: request.txt  response.txt
tests/data/api/post_bot_200/: request.txt  response.txt
tests/data/api/post_bot_400_bot_executionerror/: request.txt  response.txt
tests/data/api/post_bot_400_invalid_json/: request.txt  response.txt
tests/data/api/post_bot_400_invalid_update/: request.txt  response.txt
tests/data/api/post_bot_400_unsupported_json/: request.txt  (+1 more)
(+8 files in other folders)
